APIs/googleapis.com/baremetalsolution/v1/javascript-client/README.md
# bare_metal_solution_api

BareMetalSolutionApi - JavaScript client for bare_metal_solution_api
Provides ways to manage Bare Metal Solution hardware installed in a regional extension located near a Google Cloud data center.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: v1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install bare_metal_solution_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your bare_metal_solution_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var BareMetalSolutionApi = require('bare_metal_solution_api');

var defaultClient = BareMetalSolutionApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new BareMetalSolutionApi.OperationsApi()
var name = "name_example"; // {String} The name of the operation resource to be cancelled.
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'body': {key: null} // {Object} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.baremetalsolutionOperationsCancel(name, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://baremetalsolution.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BareMetalSolutionApi.OperationsApi* | [**baremetalsolutionOperationsCancel**](docs/OperationsApi.md#baremetalsolutionOperationsCancel) | **POST** /v1/{name}:cancel | 
*BareMetalSolutionApi.OperationsApi* | [**baremetalsolutionOperationsDelete**](docs/OperationsApi.md#baremetalsolutionOperationsDelete) | **DELETE** /v1/{name} | 
*BareMetalSolutionApi.OperationsApi* | [**baremetalsolutionOperationsList**](docs/OperationsApi.md#baremetalsolutionOperationsList) | **GET** /v1/{name} | 


## Documentation for Models

 - [BareMetalSolutionApi.ListOperationsResponse](docs/ListOperationsResponse.md)
 - [BareMetalSolutionApi.LogicalInterface](docs/LogicalInterface.md)
 - [BareMetalSolutionApi.Operation](docs/Operation.md)
 - [BareMetalSolutionApi.OperationMetadata](docs/OperationMetadata.md)
 - [BareMetalSolutionApi.ReconciliationOperationMetadata](docs/ReconciliationOperationMetadata.md)
 - [BareMetalSolutionApi.ServerNetworkTemplate](docs/ServerNetworkTemplate.md)
 - [BareMetalSolutionApi.Status](docs/Status.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

