APIs/googleapis.com/baremetalsolution/v2/javascript-client/README.md
# bare_metal_solution_api

BareMetalSolutionApi - JavaScript client for bare_metal_solution_api
Provides ways to manage Bare Metal Solution hardware installed in a regional extension located near a Google Cloud data center.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: v2
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install bare_metal_solution_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your bare_metal_solution_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var BareMetalSolutionApi = require('bare_metal_solution_api');

var defaultClient = BareMetalSolutionApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new BareMetalSolutionApi.ProjectsApi()
var instance = "instance_example"; // {String} Required. Name of the instance.
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'detachLunRequest': new BareMetalSolutionApi.DetachLunRequest() // {DetachLunRequest} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.baremetalsolutionProjectsLocationsInstancesDetachLun(instance, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://baremetalsolution.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesDetachLun**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesDetachLun) | **POST** /v2/{instance}:detachLun | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesDisableInteractiveSerialConsole**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesDisableInteractiveSerialConsole) | **POST** /v2/{name}:disableInteractiveSerialConsole | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesEnableInteractiveSerialConsole**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesEnableInteractiveSerialConsole) | **POST** /v2/{name}:enableInteractiveSerialConsole | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesList) | **GET** /v2/{parent}/instances | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesLoadAuthInfo**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesLoadAuthInfo) | **GET** /v2/{name}:loadAuthInfo | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesReset**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesReset) | **POST** /v2/{name}:reset | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesStart**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesStart) | **POST** /v2/{name}:start | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesStop**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesStop) | **POST** /v2/{name}:stop | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsList) | **GET** /v2/{name}/locations | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsNetworksList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsNetworksList) | **GET** /v2/{parent}/networks | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsNetworksListNetworkUsage**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsNetworksListNetworkUsage) | **GET** /v2/{location}/networks:listNetworkUsage | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsNfsSharesCreate**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsNfsSharesCreate) | **POST** /v2/{parent}/nfsShares | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsNfsSharesList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsNfsSharesList) | **GET** /v2/{parent}/nfsShares | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsOsImagesList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsOsImagesList) | **GET** /v2/{parent}/osImages | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsProvisioningConfigsCreate**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsProvisioningConfigsCreate) | **POST** /v2/{parent}/provisioningConfigs | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsProvisioningConfigsSubmit**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsProvisioningConfigsSubmit) | **POST** /v2/{parent}/provisioningConfigs:submit | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsProvisioningQuotasList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsProvisioningQuotasList) | **GET** /v2/{parent}/provisioningQuotas | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsSshKeysCreate**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsSshKeysCreate) | **POST** /v2/{parent}/sshKeys | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsSshKeysList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsSshKeysList) | **GET** /v2/{parent}/sshKeys | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesList) | **GET** /v2/{parent}/volumes | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesLunsEvict**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesLunsEvict) | **POST** /v2/{name}:evict | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesLunsList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesLunsList) | **GET** /v2/{parent}/luns | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesPatch**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesPatch) | **PATCH** /v2/{name} | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesRename**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesRename) | **POST** /v2/{name}:rename | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesResize**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesResize) | **POST** /v2/{volume}:resize | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsCreate**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsCreate) | **POST** /v2/{parent}/snapshots | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsDelete**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsDelete) | **DELETE** /v2/{name} | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsGet**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsGet) | **GET** /v2/{name} | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsList) | **GET** /v2/{parent}/snapshots | 
*BareMetalSolutionApi.ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsRestoreVolumeSnapshot**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsRestoreVolumeSnapshot) | **POST** /v2/{volumeSnapshot}:restoreVolumeSnapshot | 


## Documentation for Models

 - [BareMetalSolutionApi.AllowedClient](docs/AllowedClient.md)
 - [BareMetalSolutionApi.DetachLunRequest](docs/DetachLunRequest.md)
 - [BareMetalSolutionApi.GoogleCloudBaremetalsolutionV2LogicalInterface](docs/GoogleCloudBaremetalsolutionV2LogicalInterface.md)
 - [BareMetalSolutionApi.GoogleCloudBaremetalsolutionV2ServerNetworkTemplateLogicalInterface](docs/GoogleCloudBaremetalsolutionV2ServerNetworkTemplateLogicalInterface.md)
 - [BareMetalSolutionApi.Instance](docs/Instance.md)
 - [BareMetalSolutionApi.InstanceConfig](docs/InstanceConfig.md)
 - [BareMetalSolutionApi.InstanceQuota](docs/InstanceQuota.md)
 - [BareMetalSolutionApi.IntakeVlanAttachment](docs/IntakeVlanAttachment.md)
 - [BareMetalSolutionApi.ListInstancesResponse](docs/ListInstancesResponse.md)
 - [BareMetalSolutionApi.ListLocationsResponse](docs/ListLocationsResponse.md)
 - [BareMetalSolutionApi.ListLunsResponse](docs/ListLunsResponse.md)
 - [BareMetalSolutionApi.ListNetworkUsageResponse](docs/ListNetworkUsageResponse.md)
 - [BareMetalSolutionApi.ListNetworksResponse](docs/ListNetworksResponse.md)
 - [BareMetalSolutionApi.ListNfsSharesResponse](docs/ListNfsSharesResponse.md)
 - [BareMetalSolutionApi.ListOSImagesResponse](docs/ListOSImagesResponse.md)
 - [BareMetalSolutionApi.ListProvisioningQuotasResponse](docs/ListProvisioningQuotasResponse.md)
 - [BareMetalSolutionApi.ListSSHKeysResponse](docs/ListSSHKeysResponse.md)
 - [BareMetalSolutionApi.ListVolumeSnapshotsResponse](docs/ListVolumeSnapshotsResponse.md)
 - [BareMetalSolutionApi.ListVolumesResponse](docs/ListVolumesResponse.md)
 - [BareMetalSolutionApi.LoadInstanceAuthInfoResponse](docs/LoadInstanceAuthInfoResponse.md)
 - [BareMetalSolutionApi.Location](docs/Location.md)
 - [BareMetalSolutionApi.LogicalNetworkInterface](docs/LogicalNetworkInterface.md)
 - [BareMetalSolutionApi.Lun](docs/Lun.md)
 - [BareMetalSolutionApi.LunRange](docs/LunRange.md)
 - [BareMetalSolutionApi.Network](docs/Network.md)
 - [BareMetalSolutionApi.NetworkAddress](docs/NetworkAddress.md)
 - [BareMetalSolutionApi.NetworkAddressReservation](docs/NetworkAddressReservation.md)
 - [BareMetalSolutionApi.NetworkConfig](docs/NetworkConfig.md)
 - [BareMetalSolutionApi.NetworkMountPoint](docs/NetworkMountPoint.md)
 - [BareMetalSolutionApi.NetworkUsage](docs/NetworkUsage.md)
 - [BareMetalSolutionApi.NfsExport](docs/NfsExport.md)
 - [BareMetalSolutionApi.NfsShare](docs/NfsShare.md)
 - [BareMetalSolutionApi.OSImage](docs/OSImage.md)
 - [BareMetalSolutionApi.Operation](docs/Operation.md)
 - [BareMetalSolutionApi.ProvisioningConfig](docs/ProvisioningConfig.md)
 - [BareMetalSolutionApi.ProvisioningQuota](docs/ProvisioningQuota.md)
 - [BareMetalSolutionApi.QosPolicy](docs/QosPolicy.md)
 - [BareMetalSolutionApi.RenameInstanceRequest](docs/RenameInstanceRequest.md)
 - [BareMetalSolutionApi.RenameNetworkRequest](docs/RenameNetworkRequest.md)
 - [BareMetalSolutionApi.RenameNfsShareRequest](docs/RenameNfsShareRequest.md)
 - [BareMetalSolutionApi.RenameVolumeRequest](docs/RenameVolumeRequest.md)
 - [BareMetalSolutionApi.ResizeVolumeRequest](docs/ResizeVolumeRequest.md)
 - [BareMetalSolutionApi.SSHKey](docs/SSHKey.md)
 - [BareMetalSolutionApi.ServerNetworkTemplate](docs/ServerNetworkTemplate.md)
 - [BareMetalSolutionApi.SnapshotReservationDetail](docs/SnapshotReservationDetail.md)
 - [BareMetalSolutionApi.Status](docs/Status.md)
 - [BareMetalSolutionApi.SubmitProvisioningConfigRequest](docs/SubmitProvisioningConfigRequest.md)
 - [BareMetalSolutionApi.SubmitProvisioningConfigResponse](docs/SubmitProvisioningConfigResponse.md)
 - [BareMetalSolutionApi.UserAccount](docs/UserAccount.md)
 - [BareMetalSolutionApi.VRF](docs/VRF.md)
 - [BareMetalSolutionApi.VlanAttachment](docs/VlanAttachment.md)
 - [BareMetalSolutionApi.Volume](docs/Volume.md)
 - [BareMetalSolutionApi.VolumeConfig](docs/VolumeConfig.md)
 - [BareMetalSolutionApi.VolumeSnapshot](docs/VolumeSnapshot.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

